--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "start": "node server-organized.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["node", "express", "api", "server"],
+  "keywords": [
+    "node",
+    "express",
+    "api",
+    "server"
+  ],
   "author": "Israel Henrique",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "ioredis": "^5.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
